# redirect-rs

./: Cargo.toml  README.md  oci.json
.github/workflows/: build.yaml
src/: main.rs
